[Layout] fixed blocknative modal overlapped by charts

--- a/packages/client-new/pages/_app.css
+++ b/packages/client-new/pages/_app.css
@@ -2,3 +2,7 @@ html, body, #__next {
     padding: 0;
     margin: 0;
 }
+
+.bn-onboard-modal {
+    z-index: 3;
+}
